@@ -10,6 +10,10 @@ Bernhard Walle, Joerg Spieler, Kevin Hunter, François Rey, Dion Whitehead,
 Marcelo Vanzin and Bernhard Walle for contributing to this release.
 
 {{{ Bug fixes
+- The "buffer" variable is always the current buffer and not the buffer
+  where the replacement occurs when using beanshell snippet replacement
+  (#3043118) (Matthieu Casanova)
+
 - Removed workaround in drag & drop code of TextArea that doesn't seem
   useful anymore on Ubuntu and cause exceptions when dropping a Transferable
   that is not a String but has a java.io.InputStream as representation class
